  * Added a convenience global Breadcrumbs instance (GlobalBreadcrumbs) - for troubleshooting use only
  * Removed all GenericCacheExtensions - already handled by ReflectionCache. Renamed ReflectionCacheKey to IReflectionCacheKey.
  * Added caching to BuildBindingPredicate()
  * Updated GetMemberExpressions() extension method to support any Expression that can be unwrapped to a MemberExpression.

AllOverIt.Assertion
  * Removed methods that asserted an enumerable was a concrete collection type and instead updated .NET Core 3.1
    versions to check for different collection types before falling back to the default Any() Linq method.

AllOverIt.Pagination
  * New package to provide keyset based pagination for any IQueryable, including EF queries

AllOverIt.EntityFrameworkCore.Pagination
  * New package to provide keyset based pagination extensions for any EF


27 Jun 2022
Version 5.9.1
======================================================================================================================
AllOverIt.Aws.Cdk.AppSync
  * Added missing AuthLambdaDirective support to queries and mutations06 Jun 2022
  
  
06 Jun 2022
Version 5.9.0
======================================================================================================================
AllOverIt
  * Added Clear(), Reset(), AddCallSite(), and AddExtendedCallSite() to Breadcrumbs, as well as the ability to
    enable/disable adding breadcrumbs. StartTimestamp and Enabled are now thread safe if indicated by the options.
    The breadcrumbs can also be configured to initially be enabled or disabled when initially created.
  * Added ReadOnlyCollection, ReadOnlyList, and ReadOnlyDictionary implementations that are  truly immutable
  * Updated Collection/List/Dictionary EmptyReadOnly<T>() so the underlying collection is truly immutable

AllOverIt.DependencyInjection
  * Updated to reference Microsoft.Extensions.DependencyInjection.Abstractions instead of Microsoft.Extensions.DependencyInjection
